; ModuleID = '/home/carl/AnghaBench/esp-idf/components/mdns/extr_mdns.c_mdns_service_remove_all.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/mdns/extr_mdns.c_mdns_service_remove_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }
%struct.TYPE_5__ = type { i32 }

@_mdns_server = common dso_local global %struct.TYPE_6__* null, align 8
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4
@HOOK_MALLOC_FAILED = common dso_local global i32 0, align 4
@ESP_ERR_NO_MEM = common dso_local global i32 0, align 4
@ACTION_SERVICES_CLEAR = common dso_local global i32 0, align 4
@pdPASS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mdns_service_remove_all() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = load %struct.TYPE_6__*, %struct.TYPE_6__** @_mdns_server, align 8
  %4 = icmp ne %struct.TYPE_6__* %3, null
  br i1 %4, label %7, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  store i32 %6, i32* %1, align 4
  br label %38

7:                                                ; preds = %0
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** @_mdns_server, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %14, label %12

12:                                               ; preds = %7
  %13 = load i32, i32* @ESP_OK, align 4
  store i32 %13, i32* %1, align 4
  br label %38

14:                                               ; preds = %7
  %15 = call i64 @malloc(i32 4)
  %16 = inttoptr i64 %15 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %16, %struct.TYPE_5__** %2, align 8
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %18 = icmp ne %struct.TYPE_5__* %17, null
  br i1 %18, label %22, label %19

19:                                               ; preds = %14
  %20 = load i32, i32* @HOOK_MALLOC_FAILED, align 4
  %21 = load i32, i32* @ESP_ERR_NO_MEM, align 4
  store i32 %21, i32* %1, align 4
  br label %38

22:                                               ; preds = %14
  %23 = load i32, i32* @ACTION_SERVICES_CLEAR, align 4
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 4
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** @_mdns_server, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i64 @xQueueSend(i32 %28, %struct.TYPE_5__** %2, i32 0)
  %30 = load i64, i64* @pdPASS, align 8
  %31 = icmp ne i64 %29, %30
  br i1 %31, label %32, label %36

32:                                               ; preds = %22
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %34 = call i32 @free(%struct.TYPE_5__* %33)
  %35 = load i32, i32* @ESP_ERR_NO_MEM, align 4
  store i32 %35, i32* %1, align 4
  br label %38

36:                                               ; preds = %22
  %37 = load i32, i32* @ESP_OK, align 4
  store i32 %37, i32* %1, align 4
  br label %38

38:                                               ; preds = %36, %32, %19, %12, %5
  %39 = load i32, i32* %1, align 4
  ret i32 %39
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i64 @xQueueSend(i32, %struct.TYPE_5__**, i32) #1

declare dso_local i32 @free(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
